--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -31,7 +31,7 @@ jobs:
           fetch-depth: 0
       - uses: goto-bus-stop/setup-zig@v2
         with:
-          version: 0.11.0
+          version: master
 
       - name: Build Summary ${{ matrix.targets }}
         run: zig build -DTests --summary all -freference-trace -Dtarget=${{ matrix.targets }}
